# mandelbrot

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: Shaders.hpp  UpdateFlags.hpp  main.hpp  mandelbrot.cuh
shaders/: fragment.glsl  vertex.glsl
src/: Shaders.cpp  main.cpp  main.odin  mandelbrot.cu
